# lf-esp-idf-uc-template

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  flake.nix  shell.nix
.github/actions/espidf/: action.yml
.github/actions/reactor-uc/: action.yml
.github/scripts/: run-all.sh
.github/workflows/: ci.yml
src/: Blink.lf  Blink.ulf  HelloEsp.lf  HelloEsp.ulf  Timer.lf  Timer.ulf
src/lib/: Led.lf  Led.ulf
